NipSharp/Generated/NipParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ../Nip.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace NipSharp {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class NipParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, FLAG=7, AFFIX=8, MAXQUANTITY=9, 
		TIER=10, MERCTIER=11, CHARMTIER=12, SWAPTIER=13, FLOAT=14, INTEGER=15, 
		IDENTIFIER=16, EQ=17, NEQ=18, GT=19, GTE=20, LT=21, LTE=22, AND=23, OR=24, 
		MUL=25, DIV=26, ADD=27, SUB=28, WS=29, LINE_COMMENT=30, BLOCK_COMMENT=31;
	public const int
		RULE_flagProperty = 0, RULE_affixProperty = 1, RULE_stat = 2, RULE_meProperty = 3, 
		RULE_property = 4, RULE_maxQuantity = 5, RULE_tier = 6, RULE_mercTier = 7, 
		RULE_charmTier = 8, RULE_swapTier = 9, RULE_number = 10, RULE_numberOrAlias = 11, 
		RULE_statExpr = 12, RULE_statRule = 13, RULE_propertyRule = 14, RULE_additionalRule = 15, 
		RULE_nipRule = 16, RULE_line = 17;
	public static readonly string[] ruleNames = {
		"flagProperty", "affixProperty", "stat", "meProperty", "property", "maxQuantity", 
		"tier", "mercTier", "charmTier", "swapTier", "number", "numberOrAlias", 
		"statExpr", "statRule", "propertyRule", "additionalRule", "nipRule", "line"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'me.'", "'('", "')'", "'#'", "'flag'", null, "'maxquantity'", 
		"'tier'", "'merctier'", "'charmtier'", "'swaptier'", null, null, null, 
		"'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "'*'", "'/'", 
		"'+'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "FLAG", "AFFIX", "MAXQUANTITY", 
		"TIER", "MERCTIER", "CHARMTIER", "SWAPTIER", "FLOAT", "INTEGER", "IDENTIFIER", 
		"EQ", "NEQ", "GT", "GTE", "LT", "LTE", "AND", "OR", "MUL", "DIV", "ADD", 
		"SUB", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Nip.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static NipParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public NipParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public NipParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FlagPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLAG() { return GetToken(NipParser.FLAG, 0); }
		public FlagPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flagProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlagProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlagPropertyContext flagProperty() {
		FlagPropertyContext _localctx = new FlagPropertyContext(Context, State);
		EnterRule(_localctx, 0, RULE_flagProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			Match(FLAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AffixPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AFFIX() { return GetToken(NipParser.AFFIX, 0); }
		public AffixPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_affixProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAffixProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AffixPropertyContext affixProperty() {
		AffixPropertyContext _localctx = new AffixPropertyContext(Context, State);
		EnterRule(_localctx, 2, RULE_affixProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(AFFIX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(NipParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(NipParser.INTEGER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			_la = TokenStream.LA(1);
			if ( !(_la==INTEGER || _la==IDENTIFIER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MePropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(NipParser.IDENTIFIER, 0); }
		public MePropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_meProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMeProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MePropertyContext meProperty() {
		MePropertyContext _localctx = new MePropertyContext(Context, State);
		EnterRule(_localctx, 6, RULE_meProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(NipParser.IDENTIFIER, 0); }
		public PropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_property; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyContext property() {
		PropertyContext _localctx = new PropertyContext(Context, State);
		EnterRule(_localctx, 8, RULE_property);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MaxQuantityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MAXQUANTITY() { return GetToken(NipParser.MAXQUANTITY, 0); }
		public MaxQuantityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_maxQuantity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaxQuantity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MaxQuantityContext maxQuantity() {
		MaxQuantityContext _localctx = new MaxQuantityContext(Context, State);
		EnterRule(_localctx, 10, RULE_maxQuantity);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			Match(MAXQUANTITY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIER() { return GetToken(NipParser.TIER, 0); }
		public TierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TierContext tier() {
		TierContext _localctx = new TierContext(Context, State);
		EnterRule(_localctx, 12, RULE_tier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			Match(TIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MercTierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MERCTIER() { return GetToken(NipParser.MERCTIER, 0); }
		public MercTierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mercTier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMercTier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MercTierContext mercTier() {
		MercTierContext _localctx = new MercTierContext(Context, State);
		EnterRule(_localctx, 14, RULE_mercTier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			Match(MERCTIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CharmTierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHARMTIER() { return GetToken(NipParser.CHARMTIER, 0); }
		public CharmTierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_charmTier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCharmTier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CharmTierContext charmTier() {
		CharmTierContext _localctx = new CharmTierContext(Context, State);
		EnterRule(_localctx, 16, RULE_charmTier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			Match(CHARMTIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwapTierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SWAPTIER() { return GetToken(NipParser.SWAPTIER, 0); }
		public SwapTierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_swapTier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwapTier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwapTierContext swapTier() {
		SwapTierContext _localctx = new SwapTierContext(Context, State);
		EnterRule(_localctx, 18, RULE_swapTier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(SWAPTIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(NipParser.INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(NipParser.FLOAT, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 20, RULE_number);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			_la = TokenStream.LA(1);
			if ( !(_la==FLOAT || _la==INTEGER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberOrAliasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(NipParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(NipParser.INTEGER, 0); }
		public NumberOrAliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numberOrAlias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberOrAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberOrAliasContext numberOrAlias() {
		NumberOrAliasContext _localctx = new NumberOrAliasContext(Context, State);
		EnterRule(_localctx, 22, RULE_numberOrAlias);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_la = TokenStream.LA(1);
			if ( !(_la==INTEGER || _la==IDENTIFIER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatExprContext : ParserRuleContext {
		public StatExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statExpr; } }
	 
		public StatExprContext() { }
		public virtual void CopyFrom(StatExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatExprParenRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public StatExprContext statExpr() {
			return GetRuleContext<StatExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(NipParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(NipParser.SUB, 0); }
		public StatExprParenRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatExprParenRule(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatMulDivRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public StatExprContext[] statExpr() {
			return GetRuleContexts<StatExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatExprContext statExpr(int i) {
			return GetRuleContext<StatExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(NipParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(NipParser.DIV, 0); }
		public StatMulDivRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatMulDivRule(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatNameRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(NipParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(NipParser.SUB, 0); }
		public StatNameRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatNameRule(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatMeRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public MePropertyContext meProperty() {
			return GetRuleContext<MePropertyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(NipParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(NipParser.SUB, 0); }
		public StatMeRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatMeRule(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatNumberRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(NipParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(NipParser.SUB, 0); }
		public StatNumberRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatNumberRule(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatAddSubRuleContext : StatExprContext {
		public IToken op;
		[System.Diagnostics.DebuggerNonUserCode] public StatExprContext[] statExpr() {
			return GetRuleContexts<StatExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatExprContext statExpr(int i) {
			return GetRuleContext<StatExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(NipParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(NipParser.SUB, 0); }
		public StatAddSubRuleContext(StatExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INipVisitor<TResult> typedVisitor = visitor as INipVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatAddSubRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatExprContext statExpr() {
		return statExpr(0);
	}

	private StatExprContext statExpr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		StatExprContext _localctx = new StatExprContext(Context, _parentState);
		StatExprContext _prevctx = _localctx;
		int _startState = 24;
		EnterRecursionRule(_localctx, 24, RULE_statExpr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				_localctx = new StatNameRuleContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ADD || _la==SUB) {
					{
					State = 61;
					((StatNameRuleContext)_localctx).op = TokenStream.LT(1);
					_la = TokenStream.LA(1);
					if ( !(_la==ADD || _la==SUB) ) {
						((StatNameRuleContext)_localctx).op = ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 64;
				Match(T__0);
				State = 65;
				stat();
				State = 66;
				Match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new StatMeRuleContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ADD || _la==SUB) {
					{
					State = 68;
					((StatMeRuleContext)_localctx).op = TokenStream.LT(1);
					_la = TokenStream.LA(1);
					if ( !(_la==ADD || _la==SUB) ) {
						((StatMeRuleContext)_localctx).op = ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 71;
				Match(T__2);
				State = 72;
				meProperty();
				}
				break;
			case 3:
				{
				_localctx = new StatNumberRuleContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ADD || _la==SUB) {
					{
					State = 73;
					((StatNumberRuleContext)_localctx).op = TokenStream.LT(1);
					_la = TokenStream.LA(1);
					if ( !(_la==ADD || _la==SUB) ) {
						((StatNumberRuleContext)_localctx).op = ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 76;
				number();
				}
				break;
			case 4:
				{
				_localctx = new StatExprParenRuleContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ADD || _la==SUB) {
					{
					State = 77;
					((StatExprParenRuleContext)_localctx).op = TokenStream.LT(1);
					_la = TokenStream.LA(1);
					if ( !(_la==ADD || _la==SUB) ) {
						((StatExprParenRuleContext)_localctx).op = ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}
